--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,51 @@
+/* CSS reset  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 1px solid red;
+}
+
+/* Content for home page  */
 body {
-  background-color: aquamarine;
+  font-family: "Times New Roman", Times, serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  background-color: grey;
+}
+
+nav {
+  display: flex;
+  height: 10vh;
+  justify-content: center;
+  gap: 7em;
+}
+
+nav h1 {
+  color: yellow;
+  width: 50%;
+  font-size: 5em;
+  margin-top: 0.3em;
+  margin-left: 1em;
+}
+
+nav button {
+  color: red;
+  width: 10em;
+  font-size: 1.7em;
+  margin-top: 2em;
+  border-radius: 30px;
+  
+}
+
+#content {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+}
+
+#content img {
+  width: 100vw;
 }
