--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "myFont";
+  src: url("/src/assets/zai-covid-19-vaccine.regular.ttf");
+  font-weight: normal;
+  font-weight: normal;
+}
+
 /* CSS reset  */
 * {
   margin: 0;
@@ -27,8 +34,8 @@ nav h1 {
   color: yellow;
   width: 50%;
   font-size: 5em;
-  margin-top: 0.3em;
   margin-left: 1em;
+  font-family: "myFont";
 }
 
 nav button {
@@ -37,15 +44,40 @@ nav button {
   font-size: 1.7em;
   margin-top: 2em;
   border-radius: 30px;
-  
 }
 
 #content {
   display: flex;
   width: 100vw;
   height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #content img {
   width: 100vw;
+}
+
+/* Code to render the menu */
+
+.menu-wrap {
+  color: blue;
+  width: 60%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-item {
+  width: 50%;
+  height: 50%;
+  text-align: center;
+}
+
+.food {
+  color: red;
+  margin-top:3em;
 }
